Try to use phantomjs for integration tests. Note: Phantomjs ignores the set proxy for localhost/127.0.0.1 so we use 127.0.1.1
The port of the demo page server should be chosen by the system, now we need the ability to get that port in SahiIntegrationTest